made section titles prettier

--- a/Basic_HDDM_Tutorial.ipynb
+++ b/Basic_HDDM_Tutorial.ipynb
@@ -663,7 +663,7 @@
    "id": "ea97be6c-31d1-48b7-be03-059ca4edfa73",
    "metadata": {},
    "source": [
-    "## Model with condition specific drift rates"
+    "## Condition specific drift rates"
    ]
   },
   {
@@ -783,7 +783,7 @@
    "id": "c820b5c0-7e15-4142-9f8e-4042a3538c99",
    "metadata": {},
    "source": [
-    "## Model with condition specific drift rates and within subject effects"
+    "## Within-subject effects"
    ]
   },
   {
@@ -912,6 +912,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "51fef29b",
+   "metadata": {},
+   "source": [
+    "## Fitting regression models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "id": "cb0feda8-4ded-4db4-a00f-3c9b912c5b77",
@@ -994,6 +1002,14 @@
     "hddm.analyze.plot_posterior_nodes([theta], bins=20)\n",
     "plt.xlabel('Theta coeffecient in ')\n",
     "print(\"P(a_theta < 0) = \", (theta.trace() < 0).mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9980447",
+   "metadata": {},
+   "source": [
+    "## Dealing with outliers"
    ]
   },
   {
